--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <!-- <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a> -->
                 </div>
                 <div class="col-md-5  mt-4 text-center  d-md-block">
-                    <img class="img-fluid" src="../asset/bg.jpeg" alt="11">
+                    <img class="img-fluid" src="asset/bg.jpeg" alt="11">
                 </div>
             </div>
         </section>
@@ -310,27 +310,27 @@
 
 
             <figure class="figure">
-                <img src="../asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption">Ni'imatullah Kabiru Tijjani.</figcaption>
             </figure>
             <figure class="figure">
-                <img src="../asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption">Ni'imatullah Kabiru Tijjani.</figcaption>
             </figure>
             <figure class="figure">
-                <img src="../asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption">Ni'imatullah Kabiru Tijjani.</figcaption>
             </figure>
             <figure class="figure">
-                <img src="../asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption">Ni'imatullah Kabiru Tijjani.</figcaption>
             </figure>
             <figure class="figure">
-                <img src="../asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption">Ni'imatullah Kabiru Tijjani.</figcaption>
             </figure>
             <figure class="figure">
-                <img src="../asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
+                <img src="asset/n.jpg" class="figure-img img-fluid rounded" alt="...">
                 <figcaption class="figure-caption">Ni'imatullah Kabiru Tijjani.</figcaption>
             </figure>
 
